ARROW-5260: [Python] Fix crash when deserializating from components in another process